--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,7 @@
     <string name="app_name">JunctionHack</string>
 
     <string name="price_range">$%d - %d$</string>
+    <string name="common_next">Next</string>
 
     <string name="start_hello">Hi, friend!</string>
     <string name="start_title">Travel with us!</string>
@@ -13,9 +14,10 @@
 
     <string name="tours_title">Your tours</string>
     <string name="tours_hint">Where would you like to go?</string>
+    <string name="tours_rating">Rating:</string>
 
     <string name="bottom_menu_tours">Your tours</string>
     <string name="bottom_menu_profile">Profile</string>
     <string name="budget_title">Select your budget</string>
-    <string name="common_next">Next</string>
+    <string name="tour_detail_description_label">Description:</string>
 </resources>
